--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <main>
     <h2>Escolha uma opção:</h2>
     <a href="banco_coisas_sumiram.html">Coisas Que Sumiram</a>
-    <a href="encontrou_coisas.html">Coisas Encontradas</a>
+    <a href="banco_encontrou_coisas.html">Coisas Encontradas</a>
   </main>
 </body>
 </html>
